# agentconfig

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml
agentconfig/: __init__.py  a2a.py  loader.py  mcp.py  portable.py
agentconfig/cli/: __init__.py  main.py
agentconfig/importers/: __init__.py  skill_seeker.py
agentconfig/runtime/: __init__.py  executor.py  monitor.py  self_eval.py
agentconfig/semantic/: __init__.py  config_gen.py  constraint.py  intent.py
agentconfig/ui/: __init__.py  app.py
agentconfig/ui/static/: chat.html  configs.html  configure.html  index.html  style.css  utils.js
agentconfig/utils/: __init__.py  helpers.py
agentconfig/validation/: __init__.py  validator.py
docs/: AGENT_SPEC.md  research-agent-playbook.md
examples/: 01_customer_support.py  02_web_ui.py  03_import_skill.py  04_healthcare.py  continuous_learning.py  customer_support.yaml  healthcare_agent.toml  research_agent_mcp.yaml
schemas/: agent-config.schema.json
tests/: test_a2a_and_mcp.py  test_agentconfig.py  test_portable.py  test_validation_and_loader.py
