[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentconfig"
version = "0.1.0"
description = "Business-semantic driven AI agent configuration system. The missing layer between business users and AI agents."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "cdzzy" }]
keywords = ["ai-agent", "llm", "configuration", "business", "no-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = ["flask>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
agentconfig = "agentconfig.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentconfig*"]
